2022-11-01T08:27:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3367947920 # 188
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 67 204 / 85 236
* notice: next accum: outdated-unq outdated-all / unq all: 67 204 / 86 237
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-01]

2022-11-01T02:20:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3366286507 # 187
* notice: last 14d: unq all: 5 32
* notice: prev accum: outdated-unq outdated-all / unq all: 67 204 / 85 236
* notice: next accum: outdated-unq outdated-all / unq all: 67 204 / 85 236
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-18 2022-10-31]

2022-10-31T16:32:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3363003136 # 186
* notice: last 14d: unq all: 5 32
* notice: prev accum: outdated-unq outdated-all / unq all: 66 202 / 85 235
* notice: next accum: outdated-unq outdated-all / unq all: 67 204 / 85 236
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-17] / []

2022-10-31T08:31:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3359742657 # 185
* notice: last 14d: unq all: 5 33
* notice: prev accum: outdated-unq outdated-all / unq all: 66 202 / 84 235
* notice: next accum: outdated-unq outdated-all / unq all: 66 202 / 85 235
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-17 2022-10-31]

2022-10-31T02:11:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3358054641 # 184