@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-11-01T08:27:38Z",
+  "timestamp" : "2022-11-01T16:33:10Z",
   "count_outdated" : 204,
   "uniques_outdated" : 67,
   "count" : 237,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-10-18T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-11-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
