@@ -1,3 +1,11 @@
+2022-11-01T16:33:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3371106269 # 189
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 67 204 / 86 237
+* notice: next accum: outdated-unq outdated-all / unq all: 67 204 / 86 237
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-18 2022-11-01]
+
 2022-11-01T08:27:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3367947920 # 188
 * notice: last 14d: unq all: 5 33
